--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,15 +1,56 @@
 <h1>New Product</h1>
 <%= form_for @product do |f| %>
-  <%= f.label :name %>
+<div class="field">
+  <%= f.label :name %><br>
   <%= f.text_field :name %>
-  <br />
-  <%= f.label :price %>
+</div>
+  <br>
+<div class="field">
+  <%= f.label :price %><br>
   <%= f.text_field :price %>
-  <br />
-  <%= f.label :description %>
+</div>
+  <br>
+<div class="field">
+  <%= f.label :description %><br>
   <%= f.text_area :description %>
-  <br />
-  <%= f.label :inventory %>
-  <%= f.text_field :inventory %>
+</div>
+  <br>
+<div class="field">
+  <%= f.label :inventory %><br>
+  <%= f.text_field :inventory %><br>
+</div>
+
+<div class="actions">
   <%= f.submit "submit" %>
+</div>
 <% end %>
+
+<div id="productResult">
+  <h2 id="productName">Name: </h2>
+  <p id="productPrice">$</p>
+  <p id="productDescription">Description: </p>
+  <p id="productInventory">Inventory: </p>
+</div>
+
+
+
+<script type="text/javascript" charset="utf-8">
+$(function () {
+  $('form').submit(function(event){
+    event.preventDefault()
+
+    var values = $(this).serialize()
+    var posting = $.post('/products', values)
+    posting.done(function(data){
+        var product = data
+        $("#productName").text(product.name)
+        //debugger
+        $("#productPrice").append(product.price)
+        $("#productDescription").text(product.description)
+        $("#productInventory").text(product.inventory)
+    })
+
+  })
+})
+
+</script>
